@@ -1,3 +1,14 @@
+2003-01-18  Bill Bumgarner  <bbum@codefab.com>
+
+    * Modules/objc/OC_PythonDictionary.m ([OC_PythonDictionary
+      -objectForKey:]): Fixed -objectForKey: to return nil if key did not
+      exist (previously, it would segfault).   This mimics NSDictionary
+      behavior.
+
+    * Lib/Foundation: moved conversion functions to their own module;
+      Conversion.   collections unit test now tests conversion and conversion
+      helpers.
+
 2003-01-17  Bill Bumgarner  <bbum@codefab.com>
     * Lib/objc/_convenience.py (enumeratorGenerator): Busted by the language police!
 
